--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
+<html>
+<head>
+<meta name="go-import" content="jba.github.io git https://github.com/jba/go-get-test">
+
+</head>
+<body>
 Hello World
+</body>
+</html>
