--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta name="go-import" content="jba.github.io git https://github.com/jba/bit">
+<meta name="go-import" content="jba.github.io git https://github.com/jba/go-get-test">
 
 </head>
 <body>
