to forktest-legacy

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta name="go-import" content="jba.github.io git https://github.com/jba/forktest-current">
+<meta name="go-import" content="jba.github.io git https://github.com/jba/forktest-legacy">
 
 </head>
 <body>
