--- a/pinyin-quiz.html
+++ b/pinyin-quiz.html
@@ -4,7 +4,13 @@
     <title>Pinyin Quiz</title>
   </head>
   <body>
-    Welcome to Pinyin Quiz!<br/>
+    Welcome to Pinyin Quiz!
+    <p/>
+    
+    To hear any pinyin, type it here and hit enter: <input id="free" type="text" size=10 onkeydown='playFree()'/>
+
+    <p/>
+
     Click "Another" to get another question<br/>
     Type your answer in the box and hit Enter.<br/>
     Enter tones with a final 1, 2, 3, or 4. For example, <b>wei3</b>.
